force-app/main/default/objects/sked_Collection_Operation_Slot_Config__c/sked_Collection_Operation_Slot_Config__c.object-meta.xml
<CustomObject>
    <label>Collection Operation Slot Config</label>
    <nameField>
        <displayFormat>COSC-{000000}</displayFormat>
        <label>Collection Operation Slot Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Operation Slot Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>