force-app/main/default/objects/sked_Collection_Operation_Slot_Config__c/fields/sked_Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Collection Operation</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Collection Operation Slot Configs</relationshipLabel>
    <relationshipName>sked_CO_Slot_Configs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>