force-app/main/default/objects/sked_Collection_Operation_Slot_Config__c/fields/sked_Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Type__c</fullName>
    <label>Drive Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Fixed Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>