force-app/main/default/objects/sked_Collection_Operation_Slot_Config__c/fields/sked_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Effective_End_Date__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>