force-app/main/default/objects/sked_Collection_Operation_Slot_Config__c/fields/sked_Fixed_Site_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Fixed_Site_Operation_Type__c</fullName>
    <label>Fixed Site Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sked_Drive_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Non Integrated WB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>