force-app/main/default/objects/sked_Collection_Operation_Slot_Config__c/fields/sked_Procedure_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Procedure_Type__c</fullName>
    <label>Procedure Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whole Blood</fullName>
            </value>
            <value>
                <fullName>Power Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>