force-app/main/default/objects/sked_Collection_Operation_Slot_Config__c/fields/sked_Slot_Configuration__c.field-meta.xml
<CustomField>
    <fullName>sked_Slot_Configuration__c</fullName>
    <label>Slot Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>